# quantumkorea2026

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: bpt.py  crawler.py  jobs.py  results.py
backend/app/services/: worker_client.py
backend/app/services/crawler/: bpt.py  mapper.py  pipeline.py  vsfinder.py
dummy-data/: README.md  dummy_busy_60.json  dummy_busy_60.xlsx  dummy_crane_shortage_30.json  dummy_crane_shortage_30.xlsx  dummy_gam_small_8.json  dummy_gam_small_8.xlsx  dummy_mixed_25.json  dummy_mixed_25.xlsx  dummy_snd_small_10.json  dummy_snd_small_10.xlsx
frontend/: .env.example  .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/demo/: scenario-1-cqm.payload.json  scenario-1-gurobi.payload.json  scenario-1-hybrid.payload.json  scenario-1-input.payload.json  scenario-1-operator.payload.json  scenario-2-cqm.payload.json  scenario-2-gurobi.payload.json  scenario-2-hybrid.payload.json  scenario-2-input.payload.json  scenario-2-operator.payload.json  (+5 more)
frontend/scripts/: convert-figure-results.mjs  gen-samples.mjs
frontend/src/: main.tsx  vite-env.d.ts
shared/: schema.py
worker/: Dockerfile  pyproject.toml
worker/app/: config.py  main.py
worker/app/routers/: optimize.py
worker/app/solvers/: common.py  cqm_solver.py  dwave_solver.py  gurobi_solver.py  hybrid_solver.py
(+138 files in other folders)
