[project]
name = "qpo-worker"
version = "0.1.0"
description = "Quantum Port Optimizer - Worker (D-Wave + Gurobi)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "dwave-ocean-sdk>=8.0.0",
    "gurobipy>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
